--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@angular/platform-browser": "^19.2.5",
     "@angular/platform-browser-dynamic": "^19.2.5",
     "@angular/router": "^19.2.5",
-    "rxjs": "~7.8.2",
-    "tslib": "^2.8.1",
+    "@angular/service-worker": "^19.2.5",
     "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2"
+    "@tauri-apps/plugin-opener": "^2",
+    "rxjs": "~7.8.2",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.6",
