--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^19.2.5",
     "@angular/cdk": "^19.2.8",
     "@angular/common": "^19.2.5",
     "@angular/compiler": "^19.2.5",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "^19.2.6",
     "@angular/cli": "^19.2.6",
     "@angular/compiler-cli": "^19.2.5",
+    "@tauri-apps/cli": "^2",
     "@types/jasmine": "~5.1.7",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.4",
@@ -38,7 +40,6 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.3",
-    "@tauri-apps/cli": "^2"
+    "typescript": "~5.8.3"
   }
 }
