--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/service-worker": "^19.2.5",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "nostr-tools": "^2.12.0",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1"
   },
