--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tauri-apps/plugin-opener": "^2",
     "idb": "^8.0.2",
     "nostr-tools": "^2.12.0",
+    "qrcode": "^1.5.3",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1"
   },
@@ -36,6 +37,7 @@
     "@angular/compiler-cli": "^19.2.6",
     "@tauri-apps/cli": "^2",
     "@types/jasmine": "~5.1.7",
+    "@types/qrcode": "^1.5.5",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
