--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/service-worker": "^19.2.6",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@zxing/ngx-scanner": "^19.0.0",
     "idb": "^8.0.2",
     "nostr-tools": "^2.12.0",
     "qrcode": "^1.5.3",
