--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^19.2.6",
     "@angular/router": "^19.2.6",
     "@angular/service-worker": "^19.2.6",
+    "@progress/jszip-esm": "^1.0.4",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@zxing/ngx-scanner": "^19.0.0",
