--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "tauri": "tauri",
-    "get-version": "node -p \"require('./package.json').version\""
+    "get-version": "node -p \"require('./package.json').version\"",
+    "serve:ssr:app": "node dist/app/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -21,8 +22,11 @@
     "@angular/material": "^19.2.9",
     "@angular/platform-browser": "^19.2.6",
     "@angular/platform-browser-dynamic": "^19.2.6",
+    "@angular/platform-server": "^19.2.6",
     "@angular/router": "^19.2.6",
     "@angular/service-worker": "^19.2.6",
+    "@angular/ssr": "^19.2.6",
+    "express": "^4.18.2",
     "@noble/hashes": "^1.7.2",
     "@progress/jszip-esm": "^1.0.4",
     "@tauri-apps/api": "^2",
@@ -39,6 +43,7 @@
     "@angular/cli": "^19.2.7",
     "@angular/compiler-cli": "^19.2.6",
     "@tauri-apps/cli": "^2",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.7",
     "@types/qrcode": "^1.5.5",
     "jasmine-core": "~5.6.0",
