--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -46,7 +46,7 @@ jobs:
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --force
 
       - name: Build Tauri app
         uses: tauri-apps/tauri-action@v0
