feat: update routing and navigation to redirect to root instead of home

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build and Deploy to Azure Web Apps
 
 on:
   push:
-    branches: [ main ]
+    branches: [ $default-branch ]
   workflow_dispatch:
 
 env:
