feat: Enhance logging and storage services for SSR compatibility
- Updated LoggerService to handle logging based on platform (browser vs SSR).
- Introduced LocalStorageService for consistent local storage access with SSR fallback.
- Refactored NostrService, RelayService, and ThemeService to utilize LocalStorageService.
- Added MetaService for managing meta tags dynamically.
- Implemented SsrDebugService for logging during server-side rendering.
- Updated index.html with additional Open Graph meta tags for improved SEO.
- Created docker-compose.yml for easier development environment setup.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test": "ng test",
     "tauri": "tauri",
     "get-version": "node -p \"require('./package.json').version\"",
-    "serve:ssr:app": "node dist/app/server/server.mjs"
+    "serve:ssr:app": "node dist/app/server/server.mjs",
+    "debug:ssr:build": "ng build && ng run app:serve",
+    "debug:ssr:serve": "node --inspect dist/app/server/server.mjs",
+    "debug:ssr": "npm run debug:ssr:build && npm run debug:ssr:serve"
   },
   "private": true,
   "dependencies": {
