Improve the loading indication on notification settings.

--- a/angular.json
+++ b/angular.json
@@ -56,6 +56,7 @@
               "serviceWorker": "ngsw-config.json"
             },
             "development": {
+              "serviceWorker": "ngsw-config.json",
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
