--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "@angular/router": "^19.2.13",
     "@angular/service-worker": "^19.2.13",
     "@angular/ssr": "^19.2.13",
-    "express": "^4.18.2",
     "@noble/hashes": "^1.8.0",
     "@progress/jszip-esm": "^1.0.4",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@zxing/ngx-scanner": "^19.0.0",
+    "blurhash": "^2.0.5",
+    "express": "^4.18.2",
     "idb": "^8.0.3",
     "nostr-tools": "^2.13.0",
     "qrcode": "^1.5.4",
