--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "blurhash": "^2.0.5",
     "express": "^4.18.2",
     "idb": "^8.0.3",
+    "marked": "^15.0.12",
     "nostr-tools": "^2.13.0",
     "qrcode": "^1.5.4",
     "rxjs": "~7.8.2",
@@ -49,6 +50,7 @@
     "@tauri-apps/cli": "^2",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.8",
+    "@types/marked": "^5.0.2",
     "@types/qrcode": "^1.5.5",
     "jasmine-core": "~5.7.1",
     "karma": "~6.4.4",
