--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.13",
-    "@angular/cdk": "^19.2.17",
-    "@angular/common": "^19.2.13",
-    "@angular/compiler": "^19.2.13",
-    "@angular/core": "^19.2.13",
-    "@angular/forms": "^19.2.13",
-    "@angular/material": "^19.2.17",
-    "@angular/platform-browser": "^19.2.13",
-    "@angular/platform-browser-dynamic": "^19.2.13",
-    "@angular/platform-server": "^19.2.13",
-    "@angular/router": "^19.2.13",
-    "@angular/service-worker": "^19.2.13",
-    "@angular/ssr": "^19.2.13",
+    "@angular/animations": "^20.0.3",
+    "@angular/cdk": "^20.0.3",
+    "@angular/common": "^20.0.3",
+    "@angular/compiler": "^20.0.3",
+    "@angular/core": "^20.0.3",
+    "@angular/forms": "^20.0.3",
+    "@angular/material": "^20.0.3",
+    "@angular/platform-browser": "^20.0.3",
+    "@angular/platform-browser-dynamic": "^20.0.3",
+    "@angular/platform-server": "^20.0.3",
+    "@angular/router": "^20.0.3",
+    "@angular/service-worker": "^20.0.3",
+    "@angular/ssr": "^20.0.2",
     "@noble/hashes": "^1.8.0",
     "@progress/jszip-esm": "^1.0.4",
     "@tauri-apps/api": "^2",
@@ -45,9 +45,9 @@
     "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.13",
-    "@angular/cli": "^19.2.13",
-    "@angular/compiler-cli": "^19.2.13",
+    "@angular/build": "^20.0.2",
+    "@angular/cli": "^20.0.2",
+    "@angular/compiler-cli": "^20.0.3",
     "@tauri-apps/cli": "^2",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.8",
