feat: replace @zxing/ngx-scanner with @sondreb/ngx-scanner in package.json and qrcode-scan-dialog.component.ts

--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "@angular/ssr": "^20.0.2",
     "@noble/hashes": "^1.8.0",
     "@progress/jszip-esm": "^1.0.4",
+    "@sondreb/ngx-scanner": "^20.0.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
-    "@zxing/ngx-scanner": "^19.0.0",
     "blurhash": "^2.0.5",
     "express": "^5.1.0",
     "idb": "^8.0.3",
