--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "@sondreb/ngx-scanner": "^20.0.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "angularx-qrcode": "^20.0.0",
     "blurhash": "^2.0.5",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "idb": "^8.0.3",
     "marked": "^15.0.12",
     "nostr-tools": "^2.15.0",
-    "qrcode": "^1.5.4",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1"
   },
