--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tauri-apps/plugin-opener": "^2",
     "angularx-qrcode": "^20.0.0",
     "blurhash": "^2.0.5",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "idb": "^8.0.3",
     "marked": "^15.0.12",
