--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "@angular/ssr": "^20.0.2",
     "@noble/hashes": "^1.8.0",
     "@progress/jszip-esm": "^1.0.4",
-    "@sondreb/ngx-scanner": "^20.0.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@zxing/ngx-scanner": "^20.0.0",
     "angularx-qrcode": "^20.0.0",
     "blurhash": "^2.0.5",
     "cors": "^2.8.5",
