--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@angular/build": "^20.0.2",
     "@angular/cli": "^20.0.2",
     "@angular/compiler-cli": "^20.0.3",
+    "@angular/localize": "^20.0.3",
     "@tauri-apps/cli": "^2",
     "@types/express": "^5.0.3",
     "@types/jasmine": "~5.1.8",
