--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "gen:api": "ng-openapi-gen --input http://localhost:3000/openapi.json --output src/app/api --module false",
+    "gen:i18n": "ng extract-i18n",
     "test": "ng test",
     "tauri": "tauri",
     "get-version": "node -p \"require('./package.json').version\"",
