--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:ru": "ng serve --configuration=development --locale=ru-RU",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "gen:api": "ng-openapi-gen --input http://localhost:3000/openapi.json --output src/app/api --module false",
