feat: implement language selection and localization support across the application

--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/locale"
             ],
             "styles": [
               "src/styles.scss"
@@ -63,55 +64,15 @@
                 }
               ],
               "outputHashing": "all",
-              "serviceWorker": "ngsw-config.json"
+              "serviceWorker": "ngsw-config.json",
+              "localize": false
             },
             "development": {
               "serviceWorker": "ngsw-config.json",
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true,
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.development.ts"
-                }
-              ]
-            },
-            "en-US": {
-              "serviceWorker": "ngsw-config.json",
-              "optimization": false,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "localize": ["en-US"],
-              "outputPath": "dist/app/en-US",
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.development.ts"
-                }
-              ]
-            },
-            "ru": {
-              "serviceWorker": "ngsw-config.json",
-              "optimization": false,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "localize": ["ru"],
-              "outputPath": "dist/app/ru",
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.development.ts"
-                }
-              ]
-            },
-            "no": {
-              "serviceWorker": "ngsw-config.json",
-              "optimization": false,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "localize": ["no"],
-              "outputPath": "dist/app/no",
+              "localize": false,
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -130,15 +91,6 @@
             },
             "development": {
               "buildTarget": "app:build:development"
-            },
-            "en-US": {
-              "buildTarget": "app:build:en-US"
-            },
-            "ru": {
-              "buildTarget": "app:build:ru"
-            },
-            "no": {
-              "buildTarget": "app:build:no"
             }
           },
           "defaultConfiguration": "development"
@@ -159,7 +111,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/locale"
             ],
             "styles": [
               "src/styles.scss"
