--- a/package.json
+++ b/package.json
@@ -4,14 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start:en": "ng serve --configuration=en-US",
-    "start:ru": "ng serve --configuration=ru",
-    "start:no": "ng serve --configuration=no",
-    "build": "npm run build:all",
-    "build:all": "npm run build:en && npm run build:ru && npm run build:no",
-    "build:en": "ng build --configuration=en-US",
-    "build:ru": "ng build --configuration=ru",
-    "build:no": "ng build --configuration=no",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "gen:api": "ng-openapi-gen --input http://localhost:3000/openapi.json --output src/app/api --module false",
     "gen:i18n": "ng extract-i18n",
