--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "serve:ssr:app": "node dist/app/server/server.mjs",
     "debug:ssr:build": "ng build && ng run app:serve",
     "debug:ssr:serve": "node --inspect dist/app/server/server.mjs",
-    "debug:ssr": "npm run debug:ssr:build && npm run debug:ssr:serve"
+    "debug:ssr": "npm run debug:ssr:build && npm run debug:ssr:serve",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -61,6 +62,8 @@
     "@types/express": "^5.0.3",
     "@types/jasmine": "~5.1.8",
     "@types/ws": "^8.18.1",
+    "angular-eslint": "20.1.1",
+    "eslint": "^9.29.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
@@ -68,6 +71,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-openapi-gen": "^0.53.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "8.34.1"
   }
 }
