--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "arrowParens": "avoid",
-  "printWidth": 80
+  "printWidth": 80,
+  "endOfLine": "lf"
 }
