--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "debug:ssr:build": "ng build && ng run app:serve",
     "debug:ssr:serve": "node --inspect dist/app/server/server.mjs",
     "debug:ssr": "npm run debug:ssr:build && npm run debug:ssr:serve",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "format": "prettier --write .",
+    "lint-fix": "eslint . --ext .ts,.html --fix"
   },
   "private": true,
   "dependencies": {
@@ -64,6 +66,8 @@
     "@types/ws": "^8.18.1",
     "angular-eslint": "20.1.1",
     "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
@@ -71,6 +75,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-openapi-gen": "^0.53.0",
+    "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "8.34.1"
   }
