--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
+  "editor.insertSpaces": true,
+  "editor.tabSize": 2,
+  "editor.detectIndentation": false,
   "[typescript]": {
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
@@ -35,6 +38,10 @@
   },
   "files.eol": "\n",
   "prettier.requireConfig": true,
-  "eslint.validate": ["javascript", "typescript", "html"],
+  "eslint.validate": [
+    "javascript",
+    "typescript",
+    "html"
+  ],
   "eslint.format.enable": true
 }
