--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,10 +38,6 @@
   },
   "files.eol": "\n",
   "prettier.requireConfig": true,
-  "eslint.validate": [
-    "javascript",
-    "typescript",
-    "html"
-  ],
+  "eslint.validate": ["javascript", "typescript", "html"],
   "eslint.format.enable": true
 }
