--- a/package.json
+++ b/package.json
@@ -23,21 +23,33 @@
     "format": "prettier --write .",
     "lint-fix": "eslint . --ext .ts,.html --fix"
   },
+  "prettier": {
+    "printWidth": 100,
+    "singleQuote": true,
+    "overrides": [
+      {
+        "files": "*.html",
+        "options": {
+          "parser": "angular"
+        }
+      }
+    ]
+  },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.1.3",
-    "@angular/cdk": "^20.1.3",
-    "@angular/common": "^20.1.3",
-    "@angular/compiler": "^20.1.3",
-    "@angular/core": "^20.1.3",
-    "@angular/forms": "^20.1.3",
-    "@angular/material": "^20.1.3",
-    "@angular/platform-browser": "^20.1.3",
-    "@angular/platform-browser-dynamic": "^20.1.3",
-    "@angular/platform-server": "^20.1.3",
-    "@angular/router": "^20.1.3",
-    "@angular/service-worker": "^20.1.3",
-    "@angular/ssr": "^20.1.3",
+    "@angular/animations": "^20.2.0",
+    "@angular/cdk": "^20.2.0",
+    "@angular/common": "^20.2.0",
+    "@angular/compiler": "^20.2.0",
+    "@angular/core": "^20.2.0",
+    "@angular/forms": "^20.2.0",
+    "@angular/material": "^20.2.0",
+    "@angular/platform-browser": "^20.2.0",
+    "@angular/platform-browser-dynamic": "^20.2.0",
+    "@angular/platform-server": "^20.2.0",
+    "@angular/router": "^20.2.0",
+    "@angular/service-worker": "^20.2.0",
+    "@angular/ssr": "^20.2.0",
     "@getalby/sdk": "^5.1.1",
     "@noble/hashes": "^1.8.0",
     "@progress/jszip-esm": "^1.0.4",
@@ -56,13 +68,14 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
-    "@angular/build": "^20.1.3",
-    "@angular/cli": "^20.1.3",
-    "@angular/compiler-cli": "^20.1.3",
-    "@angular/localize": "^20.1.3",
+    "@angular/build": "^20.2.0",
+    "@angular/cli": "^20.2.0",
+    "@angular/compiler-cli": "^20.2.0",
+    "@angular/localize": "^20.2.0",
     "@tauri-apps/cli": "^2",
     "@types/express": "^5.0.3",
     "@types/jasmine": "~5.1.8",
+    "@types/node": "^20.17.19",
     "@types/ws": "^8.18.1",
     "angular-eslint": "20.1.1",
     "eslint": "^9.29.0",
@@ -76,7 +89,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-openapi-gen": "^0.53.0",
     "prettier": "^3.6.2",
-    "typescript": "~5.8.3",
+    "typescript": "~5.9.2",
     "typescript-eslint": "8.34.1"
   }
 }
