--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build-android:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -31,8 +31,8 @@ jobs:
       - name: Build Angular PWA for production
         run: npm run build:ssr:prod
 
-      - name: Install PWABuilder CLI
-        run: npm install -g @pwabuilder/cli
+      - name: Install PWABuilder CLI locally
+        run: npm install @pwabuilder/cli
 
       - name: Create PWABuilder directory
         run: mkdir -p pwabuilder-output
@@ -48,7 +48,7 @@ jobs:
       - name: Generate Android PWA package
         run: |
           cd pwabuilder-output
-          pwabuilder ../dist/app/browser \
+          npx pwabuilder ../dist/app/browser \
             --platform android \
             --options '{
               "packageId": "app.nostria",
@@ -110,19 +110,19 @@ jobs:
           name: Nostria ${{ github.event.inputs.version || github.ref_name }}
           body: |
             ## Nostria Android PWA Release
-            
+
             This release contains the Android APK generated from the Progressive Web App (PWA) using PWABuilder.
-            
+
             ### Installation
             1. Download the APK file below
             2. Enable "Install from unknown sources" in your Android settings
             3. Install the APK file
-            
+
             ### Changes
             - Built from commit ${{ github.sha }}
             - Version: ${{ github.event.inputs.version || github.ref_name }}
             - Build number: ${{ github.run_number }}
-            
+
             ### Download
             - **Android APK**: nostria-${{ github.event.inputs.version || github.ref_name }}.apk
           files: |
@@ -137,7 +137,7 @@ jobs:
         run: |
           # Copy the new APK to packages directory for repository storage
           cp nostria-*.apk packages/nostria.apk
-          
+
       - name: Commit updated APK
         if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
         uses: stefanzweifel/git-auto-commit-action@v5
