fix: update PWABuilder command to use the correct URL for Android PWA package generation

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Generate Android PWA package
         run: |
           cd pwabuilder-output
-          npx pwabuilder ../dist/app/browser \
+          npx pwabuilder https://nostria.app/ \
             --platform android \
             --options '{
               "packageId": "app.nostria",
@@ -60,7 +60,6 @@ jobs:
               "orientation": "any",
               "themeColor": "#303030",
               "backgroundColor": "#303030",
-              "iconUrl": "../public/icons/icon-512x512.png",
               "startUrl": "/",
               "splashScreenFadeOutDuration": 300,
               "shortcuts": [
