--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,8 +36,12 @@
       "source.fixAll.eslint": "explicit"
     }
   },
-  "files.eol": "\n",
+  "files.eol": "\r\n",
   "prettier.requireConfig": true,
-  "eslint.validate": ["javascript", "typescript", "html"],
+  "eslint.validate": [
+    "javascript",
+    "typescript",
+    "html"
+  ],
   "eslint.format.enable": true
 }
