--- a/package.json
+++ b/package.json
@@ -20,10 +20,8 @@
     "debug:ssr:serve": "node --inspect dist/app/server/server.mjs",
     "debug:ssr": "npm run debug:ssr:build && npm run debug:ssr:serve",
     "lint": "ng lint",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
     "lint-fix": "eslint . --ext .ts,.html --fix",
-    "lint:check": "eslint . --ext .ts,.html"
+    "lint:check": "eslint . --ext .ts,.html --fix"
   },
   "private": true,
   "dependencies": {
@@ -69,8 +67,6 @@
     "@types/ws": "^8.18.1",
     "angular-eslint": "20.2.0",
     "eslint": "^9.34.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
@@ -78,7 +74,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-openapi-gen": "^0.53.0",
-    "prettier": "^3.6.2",
     "typescript": "~5.9.2",
     "typescript-eslint": "8.40.0"
   }
