feat: Update Android build workflow and add TWA manifest with protocol handlers

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,15 +1,7 @@
-name: Build Android PWA
+name: Android Build
 
 on:
-  push:
-    tags:
-      - 'v*'
   workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to build (e.g., v1.0.1)'
-        required: true
-        default: 'v1.0.1'
 
 jobs:
   build-android:
@@ -22,119 +14,63 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build Angular PWA for production
-        run: npm run build:ssr:prod
+          node-version: "20"
 
       - name: Setup Java for Android build
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: "temurin"
+          java-version: "17"
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Install PWABuilder CLI and dependencies
+      - name: Decode keystore
         run: |
-          # Install PWABuilder CLI locally
-          npm install @pwabuilder/cli@latest
-          # Install required Android build tools
-          npm install cordova@latest
+          echo "${{ secrets.KEYSTORE }}" | base64 -d > android.keystore
+          ls -la android.keystore
 
-      - name: Create PWABuilder directory
-        run: mkdir -p pwabuilder-output
-
-      - name: Extract version info
-        id: version
+      - name: Generate Android TWA project
         run: |
-          VERSION=${{ github.event.inputs.version || github.ref_name }}
-          VERSION_CLEAN=${VERSION#v}  # Remove 'v' prefix if present
-          echo "version_clean=$VERSION_CLEAN" >> $GITHUB_OUTPUT
-          echo "version_code=$(date +%s)" >> $GITHUB_OUTPUT
+          echo "Current twa-manifest.json signing key path:"
+          grep -A 3 '"signingKey"' twa-manifest.json
 
-      - name: Generate Android PWA package
-        run: |
-          cd pwabuilder-output
-          npx pwabuilder https://nostria.app/ \
-            --platform android \
-            --log debug \
-            --androidPackageId app.nostria \
-            --androidAppName "Nostria" \
-            --androidAppVersion "${{ steps.version.outputs.version_clean }}" \
-            --androidVersionCode "${{ steps.version.outputs.version_code }}" \
-            --publish false
+          # Use bubblewrap Docker container to generate the Android project from the manifest
+          docker run --rm -v $(pwd):/workspace -w /workspace ghcr.io/googlechromelabs/bubblewrap:latest update --skipVersionUpgrade          echo "Bubblewrap update completed"
 
-      - name: Find generated APK
-        id: find-apk
-        run: |
-          APK_PATH=$(find pwabuilder-output -name "*.apk" -type f | head -1)
-          if [ -z "$APK_PATH" ]; then
-            echo "No APK found in pwabuilder-output"
+          # Verify the Android project was created
+          echo "Checking if Android project files exist..."
+          ls -la
+          if [ -f "build.gradle" ] && [ -f "gradlew" ] && [ -d "app" ]; then
+            echo "Android project files found!"
+            echo "Contents of app directory:"
+            ls -la app/
+          else
+            echo "ERROR: Android project files were not created!"
             exit 1
           fi
-          echo "apk_path=$APK_PATH" >> $GITHUB_OUTPUT
-          echo "apk_name=$(basename $APK_PATH)" >> $GITHUB_OUTPUT
+        env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
 
-      - name: Rename APK with version
+      - name: Build Android App
+        env:
+          BUBBLEWRAP_KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          BUBBLEWRAP_KEY_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
         run: |
-          VERSION=${{ github.event.inputs.version || github.ref_name }}
-          VERSION_CLEAN=${VERSION#v}  # Remove 'v' prefix if present
-          mv "${{ steps.find-apk.outputs.apk_path }}" "nostria-${VERSION_CLEAN}.apk"
+          # Use bubblewrap Docker container to build the Android project with license acceptance
+          echo "y" | docker run --rm -i -v $(pwd):/workspace -w /workspace \
+            -e BUBBLEWRAP_KEYSTORE_PASSWORD="${BUBBLEWRAP_KEYSTORE_PASSWORD}" \
+            -e BUBBLEWRAP_KEY_PASSWORD="${BUBBLEWRAP_KEY_PASSWORD}" \
+            ghcr.io/googlechromelabs/bubblewrap:latest build
 
-      - name: Upload APK artifact
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: nostria-android-apk
-          path: nostria-*.apk
-          retention-days: 30
+          name: release-apk
+          path: app-release-signed.apk
 
-      - name: Create GitHub Release
-        if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
-        uses: softprops/action-gh-release@v2
+      - name: Upload AAB
+        uses: actions/upload-artifact@v4
         with:
-          tag_name: ${{ github.event.inputs.version || github.ref_name }}
-          name: Nostria ${{ github.event.inputs.version || github.ref_name }}
-          body: |
-            ## Nostria Android PWA Release
-
-            This release contains the Android APK generated from the Progressive Web App (PWA) using PWABuilder.
-
-            ### Installation
-            1. Download the APK file below
-            2. Enable "Install from unknown sources" in your Android settings
-            3. Install the APK file
-
-            ### Changes
-            - Built from commit ${{ github.sha }}
-            - Version: ${{ github.event.inputs.version || github.ref_name }}
-            - Build number: ${{ github.run_number }}
-
-            ### Download
-            - **Android APK**: nostria-${{ github.event.inputs.version || github.ref_name }}.apk
-          files: |
-            nostria-*.apk
-          draft: false
-          prerelease: ${{ contains(github.ref_name, 'beta') || contains(github.ref_name, 'alpha') || contains(github.ref_name, 'rc') }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Update packages directory
-        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
-        run: |
-          # Copy the new APK to packages directory for repository storage
-          cp nostria-*.apk packages/nostria.apk
-
-      - name: Commit updated APK
-        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: 'chore: update Android APK build'
-          file_pattern: packages/nostria.apk
-          commit_user_name: 'github-actions[bot]'
-          commit_user_email: 'github-actions[bot]@users.noreply.github.com'
+          name: release-aab
+          path: app-release-bundle.aab
